[gd_scene load_steps=4 format=3 uid="uid://bur5odtjg4mqk"]

[ext_resource type="PackedScene" uid="uid://1vr8g2dxrg65" path="res://Scenes/Gynth_Console_2D.tscn" id="1_5ertr"]
[ext_resource type="Script" path="res://Scripts/recorder.gd" id="2_b373d"]
[ext_resource type="Script" path="res://Scenes/PianoKey.gd" id="2_yaubc"]

[node name="MarginContainer" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="."]
clip_contents = true
layout_mode = 2

[node name="Gynths" type="HBoxContainer" parent="VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = 20

[node name="Gynth_Console" parent="VBoxContainer/Gynths" groups=["gynth_consoles"] instance=ExtResource("1_5ertr")]
layout_mode = 2
focus_mode = 1

[node name="Gynth_Console2" parent="VBoxContainer/Gynths" groups=["gynth_consoles"] instance=ExtResource("1_5ertr")]
layout_mode = 2

[node name="Gynth_Console3" parent="VBoxContainer/Gynths" groups=["gynth_consoles"] instance=ExtResource("1_5ertr")]
layout_mode = 2

[node name="Keyboard" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.27

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Keyboard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sockets" type="HBoxContainer" parent="VBoxContainer/Keyboard/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 30
alignment = 1

[node name="keys" type="HBoxContainer" parent="VBoxContainer/Keyboard/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="A" type="ColorRect" parent="VBoxContainer/Keyboard/VBoxContainer/keys" node_paths=PackedStringArray("flat")]
custom_minimum_size = Vector2(40, 100)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_yaubc")
flat = NodePath("A_FLAT")
key_color = Color(1, 1, 1, 1)
pressed_color = Color(0, 0, 1, 1)

[node name="Label" type="Label" parent="VBoxContainer/Keyboard/VBoxContainer/keys/A"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="A_FLAT" type="ColorRect" parent="VBoxContainer/Keyboard/VBoxContainer/keys/A"]
visible = false
custom_minimum_size = Vector2(20, 50)
layout_mode = 0
offset_left = -19.5
offset_right = 19.5
offset_bottom = 50.0
size_flags_horizontal = 3
color = Color(0, 0, 0, 1)
script = ExtResource("2_yaubc")
pressed_color = Color(0, 0, 1, 1)

[node name="Label" type="Label" parent="VBoxContainer/Keyboard/VBoxContainer/keys/A/A_FLAT"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="B" type="ColorRect" parent="VBoxContainer/Keyboard/VBoxContainer/keys" node_paths=PackedStringArray("flat")]
custom_minimum_size = Vector2(40, 100)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_yaubc")
flat = NodePath("B_FLAT")
key_color = Color(1, 1, 1, 1)
pressed_color = Color(0, 0, 1, 1)

[node name="B_FLAT" type="ColorRect" parent="VBoxContainer/Keyboard/VBoxContainer/keys/B"]
custom_minimum_size = Vector2(20, 50)
layout_mode = 0
offset_left = -19.5
offset_right = 19.5
offset_bottom = 50.0
size_flags_horizontal = 3
color = Color(0, 0, 0, 1)
script = ExtResource("2_yaubc")
pressed_color = Color(0, 0, 1, 1)

[node name="Label" type="Label" parent="VBoxContainer/Keyboard/VBoxContainer/keys/B/B_FLAT"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Keyboard/VBoxContainer/keys/B"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="C" type="ColorRect" parent="VBoxContainer/Keyboard/VBoxContainer/keys"]
custom_minimum_size = Vector2(40, 100)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_yaubc")
key_color = Color(1, 1, 1, 1)
pressed_color = Color(0, 0, 1, 1)

[node name="Label" type="Label" parent="VBoxContainer/Keyboard/VBoxContainer/keys/C"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="D" type="ColorRect" parent="VBoxContainer/Keyboard/VBoxContainer/keys" node_paths=PackedStringArray("flat")]
custom_minimum_size = Vector2(40, 100)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_yaubc")
flat = NodePath("D_FLAT")
key_color = Color(1, 1, 1, 1)
pressed_color = Color(0, 0, 1, 1)

[node name="D_FLAT" type="ColorRect" parent="VBoxContainer/Keyboard/VBoxContainer/keys/D"]
custom_minimum_size = Vector2(20, 50)
layout_mode = 0
offset_left = -19.3333
offset_right = 19.3333
offset_bottom = 50.0
size_flags_horizontal = 3
color = Color(0, 0, 0, 1)
script = ExtResource("2_yaubc")
pressed_color = Color(0, 0, 1, 1)

[node name="Label" type="Label" parent="VBoxContainer/Keyboard/VBoxContainer/keys/D/D_FLAT"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Keyboard/VBoxContainer/keys/D"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="E" type="ColorRect" parent="VBoxContainer/Keyboard/VBoxContainer/keys" node_paths=PackedStringArray("flat")]
custom_minimum_size = Vector2(40, 100)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_yaubc")
flat = NodePath("E_FLAT")
key_color = Color(1, 1, 1, 1)
pressed_color = Color(0, 0, 1, 1)

[node name="E_FLAT" type="ColorRect" parent="VBoxContainer/Keyboard/VBoxContainer/keys/E"]
custom_minimum_size = Vector2(20, 50)
layout_mode = 0
offset_left = -19.5
offset_right = 19.5
offset_bottom = 50.0
size_flags_horizontal = 3
color = Color(0, 0, 0, 1)
script = ExtResource("2_yaubc")
pressed_color = Color(0, 0, 1, 1)

[node name="Label" type="Label" parent="VBoxContainer/Keyboard/VBoxContainer/keys/E/E_FLAT"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Keyboard/VBoxContainer/keys/E"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="F" type="ColorRect" parent="VBoxContainer/Keyboard/VBoxContainer/keys"]
custom_minimum_size = Vector2(40, 100)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_yaubc")
key_color = Color(1, 1, 1, 1)
pressed_color = Color(0, 0, 1, 1)

[node name="Label" type="Label" parent="VBoxContainer/Keyboard/VBoxContainer/keys/F"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="G" type="ColorRect" parent="VBoxContainer/Keyboard/VBoxContainer/keys" node_paths=PackedStringArray("flat")]
custom_minimum_size = Vector2(40, 100)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_yaubc")
flat = NodePath("G_FLAT")
key_color = Color(1, 1, 1, 1)
pressed_color = Color(0, 0, 1, 1)

[node name="G_FLAT" type="ColorRect" parent="VBoxContainer/Keyboard/VBoxContainer/keys/G"]
custom_minimum_size = Vector2(20, 50)
layout_mode = 0
offset_left = -19.3333
offset_right = 19.3333
offset_bottom = 50.0
size_flags_horizontal = 3
color = Color(0, 0, 0, 1)
script = ExtResource("2_yaubc")
pressed_color = Color(0, 0, 1, 1)

[node name="Label" type="Label" parent="VBoxContainer/Keyboard/VBoxContainer/keys/G/G_FLAT"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Keyboard/VBoxContainer/keys/G"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="A1" type="ColorRect" parent="VBoxContainer/Keyboard/VBoxContainer/keys" node_paths=PackedStringArray("flat")]
custom_minimum_size = Vector2(40, 100)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_yaubc")
flat = NodePath("A1_FLAT")
key_color = Color(1, 1, 1, 1)
pressed_color = Color(0, 0, 1, 1)

[node name="A1_FLAT" type="ColorRect" parent="VBoxContainer/Keyboard/VBoxContainer/keys/A1"]
custom_minimum_size = Vector2(20, 50)
layout_mode = 0
offset_left = -19.5
offset_right = 19.5
offset_bottom = 50.0
size_flags_horizontal = 3
color = Color(0, 0, 0, 1)
script = ExtResource("2_yaubc")
pressed_color = Color(0, 0, 1, 1)

[node name="Label" type="Label" parent="VBoxContainer/Keyboard/VBoxContainer/keys/A1/A1_FLAT"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Keyboard/VBoxContainer/keys/A1"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="B1" type="ColorRect" parent="VBoxContainer/Keyboard/VBoxContainer/keys" node_paths=PackedStringArray("flat")]
custom_minimum_size = Vector2(40, 100)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_yaubc")
flat = NodePath("B1_FLAT")
key_color = Color(1, 1, 1, 1)
pressed_color = Color(0, 0, 1, 1)

[node name="B1_FLAT" type="ColorRect" parent="VBoxContainer/Keyboard/VBoxContainer/keys/B1"]
custom_minimum_size = Vector2(20, 50)
layout_mode = 0
offset_left = -19.3333
offset_right = 19.3333
offset_bottom = 50.0
size_flags_horizontal = 3
color = Color(0, 0, 0, 1)
script = ExtResource("2_yaubc")
pressed_color = Color(0, 0, 1, 1)

[node name="Label" type="Label" parent="VBoxContainer/Keyboard/VBoxContainer/keys/B1/B1_FLAT"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Keyboard/VBoxContainer/keys/B1"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="C1" type="ColorRect" parent="VBoxContainer/Keyboard/VBoxContainer/keys"]
custom_minimum_size = Vector2(40, 100)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_yaubc")
key_color = Color(1, 1, 1, 1)
pressed_color = Color(0, 0, 1, 1)

[node name="Label" type="Label" parent="VBoxContainer/Keyboard/VBoxContainer/keys/C1"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Recorder" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
script = ExtResource("2_b373d")

[node name="RecordButton" type="Button" parent="VBoxContainer/Recorder"]
layout_mode = 2
text = "RECORD"

[node name="PlayButton" type="Button" parent="VBoxContainer/Recorder"]
layout_mode = 2
text = "PLAY"

[node name="LoopButton" type="CheckBox" parent="VBoxContainer/Recorder"]
layout_mode = 2
text = "LOOP"

[node name="SaveButton" type="Button" parent="VBoxContainer/Recorder"]
layout_mode = 2
text = "SAVE"

[node name="Status" type="Label" parent="VBoxContainer/Recorder"]
layout_mode = 2
text = "NO RECORDING"

[node name="Playback" type="AudioStreamPlayer" parent="VBoxContainer/Recorder"]
bus = &"Playback"

[node name="FileDialog" type="FileDialog" parent="VBoxContainer/Recorder"]
title = "Save WAV"
initial_position = 1
size = Vector2i(800, 400)
access = 2

[connection signal="pressed" from="VBoxContainer/Recorder/RecordButton" to="VBoxContainer/Recorder" method="_on_record_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Recorder/PlayButton" to="VBoxContainer/Recorder" method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Recorder/SaveButton" to="VBoxContainer/Recorder" method="_on_save_button_pressed"]
[connection signal="finished" from="VBoxContainer/Recorder/Playback" to="VBoxContainer/Recorder" method="_on_playback_finished"]
